--- a/Nodes/UI/Pages/Pages.yaml
+++ b/Nodes/UI/Pages/Pages.yaml
@@ -1459,6 +1459,34 @@ Children:
   - Name: MainLogic
     Id: g=ff21370a6bb95ea39219764003cb1626
     Type: NetLogic
+  - Name: Label1
+    Id: g=0d8d9334b14cd2e17147577e266d1373
+    Type: Label
+    Children:
+    - Name: Text
+      Id: g=66f4b9207358cb7377a09611c3238ccd
+      Type: BaseDataVariableType
+      DataType: LocalizedText
+      ModellingRule: Optional
+      Value: {"LocaleId":"en-US","Text":"Label1"}
+    - Name: TopMargin
+      Id: g=8a27bfe94df78161778cebb6ff190240
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 240.0
+    - Name: LeftMargin
+      Id: g=16f8364b08ece5bd1c81874a15e9a735
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 110.0
+    - Name: FontSize
+      Id: g=665a66e2603d4f0f8afef9b897141c8c
+      Type: BaseDataVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 100.0
 - Name: Data
   Id: g=1b0dc70d5d42c09a70acec1c917ca5d0
   Supertype: BasePage
