--- a/DesignTimeNodes/CommDrivers/EthernetIPDriver/EthernetIPStation/EthernetIPTagImporter.yaml
+++ b/DesignTimeNodes/CommDrivers/EthernetIPDriver/EthernetIPStation/EthernetIPTagImporter.yaml
@@ -7,7 +7,7 @@ Children:
   Id: g=391ec42da7ca662f177c1cf99921ffba
   Type: BaseDataVariableType
   DataType: AbsoluteResourceUri
-  Value: ""
+  Value: "file:///C:/Users/SBodhak1/OneDrive - Rockwell Automation, Inc/Desktop/Subhajet Data RA/Digital Transformation/FT Optix/Optix/BoilerDemo ACD files/BoilerDemo.ACD"
 - Name: Mode
   Id: g=1eade97b802dfb52e5dd63b672884d2c
   Type: BaseDataVariableType
